--- a/Views/Cobros/Detalle.cshtml
+++ b/Views/Cobros/Detalle.cshtml
@@ -52,7 +52,7 @@
 @*Botones de acción*@
 @* Mostrar botones solo si el usuario es empleado y el cobro está pendiente *@
 @*El String comparison es para ignorar mayusculas y minusculas*@
-<div class="mb-3">
+<div class="mb-3 d-flex gap-2">
     @if (
         Model.Detalle.Estado.Equals("Pendiente", StringComparison.OrdinalIgnoreCase) &&
         Session["es_empleado"] != null &&
@@ -60,10 +60,18 @@
     )
     {
         <a href="@Url.Action("Editar", "Cobros", new { id = Model.Detalle.Id_cobro })" class="btn btn-primary">Editar</a>
-        <a href="@Url.Action("Pagar", "Cobros", new { id = Model.Detalle.Id_cobro })" class="btn btn-success">Pagar</a>
+
+        using (Html.BeginForm("Pagar", "Cobros", FormMethod.Post, new { @class = "d-inline" }))
+        {
+            @Html.AntiForgeryToken()
+            @Html.Hidden("id", Model.Detalle.Id_cobro)
+            <button type="submit" class="btn btn-success">Pagar</button>
+        }
+
         <a href="@Url.Action("Eliminar", "Cobros", new { id = Model.Detalle.Id_cobro })" class="btn btn-danger" onclick="return confirm('¿Está seguro de eliminar este cobro?');">Eliminar</a>
     }
 </div>
+
 
 @*Bitácora de acciones*@
 <h3>Lista de acciones realizadas</h3>
