--- a/Views/Empleado/Index.cshtml
+++ b/Views/Empleado/Index.cshtml
@@ -46,7 +46,7 @@
 
 <!-- Botón nuevo cobro -->
 <div class="mb-3 text-end">
-    @Html.ActionLink("➕ Nuevo Cobro", "Crear", "Empleado", null, new { @class = "btn btn-success" })
+    @Html.ActionLink(" Nuevo Cobro", "Crear", "Empleado", null, new { @class = "btn btn-success bi bi-plus-lg" })
 </div>
 
 <!-- Tabla -->
